# python-terraform-registry-api

./: LICENSE  README.md  pyproject.toml  requirements.txt
registry/: __init__.py  __main__.py  main.py  terraform.json
registry/api/routes/: api.py  modules.py  providers.py  servicediscovery.py
registry/backends/: backend.py  sqlite.py
registry/core/: config.py  log.py  logging.py
registry/models/: module.py  modules.py
test/: upload.py
