[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "registry"
dynamic = ["version"]
description = "Terraform Registry written in python."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.7"
authors = [
    { name = "Patrick Lubach", email = "plubach1994@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "uvicorn",
    "fastapi",
    "pydantic",
    "python-multipart",
    "sqlalchemy",
    "typing-extensions;python_version < '3.8'",
]

[project.scripts]
registry = "registry.main:main"

[project.urls]
Changelog = "https://github.com/patricklubach/python-terraform-registry-api/blob/master/CHANGELOG.md"
Source = "https://github.com/patricklubach/python-terraform-registry-api"

[tool.hatch.version]
path = "registry/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/registry",
]
